{
  "version": 4,
  "terraform_version": "1.0.1",
  "serial": 783,
  "lineage": "db18f575-573a-da14-9005-9d764e0b782c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0c191f2c094dcf2b2",
            "domain": "vpc",
            "id": "eipalloc-09b89e73b22623315",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0cf7c7e5ceca75453",
            "private_dns": "ip-172-31-4-188.ec2.internal",
            "private_ip": "172.31.4.188",
            "public_dns": "ec2-23-20-171-222.compute-1.amazonaws.com",
            "public_ip": "23.20.171.222",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "172.31.3.50",
            "association_id": "eipassoc-072d9e40b6353b479",
            "domain": "vpc",
            "id": "eipalloc-07dd829275eba818a",
            "instance": "i-0eec91f7b020c7965",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a2a493c089750cd0",
            "private_dns": "ip-172-31-3-50.ec2.internal",
            "private_ip": "172.31.3.50",
            "public_dns": "ec2-52-1-144-55.compute-1.amazonaws.com",
            "public_ip": "52.1.144.55",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_network_interface.maintenance-nic",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.knowme-vpc",
            "aws_internet_gateway.gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-maintenance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dc2d3e4c0f9ebd18",
            "arn": "arn:aws:ec2:us-east-1:767741045941:instance/i-0eec91f7b020c7965",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eec91f7b020c7965",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Know-Me-keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0a2a493c089750cd0"
              }
            ],
            "primary_network_interface_id": "eni-0a2a493c089750cd0",
            "private_dns": "ip-172-31-3-50.ec2.internal",
            "private_ip": "172.31.3.50",
            "public_ip": "52.1.144.55",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08f895795244d420d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a268c6270bed7861",
            "tags": {
              "Name": "ec2-maintenance"
            },
            "tags_all": {
              "Name": "ec2-maintenance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c2b91391b1d5bbdf"
            ]
          },
          "dependencies": [
            "aws_subnet.subnet-1",
            "aws_vpc.knowme-vpc",
            "aws_network_interface.maintenance-nic",
            "aws_security_group.allow_web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767741045941:internet-gateway/igw-0d78b1b89b97b9ca2",
            "id": "igw-0d78b1b89b97b9ca2",
            "owner_id": "767741045941",
            "vpc_id": "vpc-0a8171cb499ed5e72"
          },
          "dependencies": [
            "aws_vpc.knowme-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767741045941:loadbalancer/app/KnowMe/517dc0a3370b063f",
            "arn_suffix": "app/KnowMe/517dc0a3370b063f",
            "dns_name": "KnowMe-1371566024.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:767741045941:loadbalancer/app/KnowMe/517dc0a3370b063f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "KnowMe",
            "security_groups": [
              "sg-0c2b91391b1d5bbdf"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a268c6270bed7861"
              },
              {
                "subnet_id": "subnet-0ef234a6809b69082"
              }
            ],
            "subnets": [
              "subnet-0a268c6270bed7861",
              "subnet-0ef234a6809b69082"
            ],
            "vpc_id": "vpc-0a8171cb499ed5e72",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_subnet.subnet-2",
            "aws_vpc.knowme-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "backend_emp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767741045941:listener/app/KnowMe/517dc0a3370b063f/9640dd59c0226585",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:767741045941:targetgroup/tg-emprendimientos/166556166b13102e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:767741045941:listener/app/KnowMe/517dc0a3370b063f/9640dd59c0226585",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:767741045941:loadbalancer/app/KnowMe/517dc0a3370b063f",
            "port": 3001,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.load-balancer",
            "aws_lb_target_group.target-group-emp",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_subnet.subnet-2",
            "aws_vpc.knowme-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "backend_usuarios",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767741045941:listener/app/KnowMe/517dc0a3370b063f/93d41e6b898d0430",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:767741045941:targetgroup/tg-usuarios/401a860d469e911e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:767741045941:listener/app/KnowMe/517dc0a3370b063f/93d41e6b898d0430",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:767741045941:loadbalancer/app/KnowMe/517dc0a3370b063f",
            "port": 3000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.load-balancer",
            "aws_lb_target_group.target-group",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_subnet.subnet-2",
            "aws_vpc.knowme-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767741045941:targetgroup/tg-usuarios/401a860d469e911e",
            "arn_suffix": "targetgroup/tg-usuarios/401a860d469e911e",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "201",
                "path": "/api/v1/usuario",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:767741045941:targetgroup/tg-usuarios/401a860d469e911e",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg-usuarios",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a8171cb499ed5e72"
          },
          "dependencies": [
            "aws_vpc.knowme-vpc",
            "aws_lb.load-balancer",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_subnet.subnet-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target-group-emp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767741045941:targetgroup/tg-emprendimientos/166556166b13102e",
            "arn_suffix": "targetgroup/tg-emprendimientos/166556166b13102e",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/v1/emprendimiento",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:767741045941:targetgroup/tg-emprendimientos/166556166b13102e",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tg-emprendimientos",
            "port": 3001,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a8171cb499ed5e72"
          },
          "dependencies": [
            "aws_lb.load-balancer",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_subnet.subnet-2",
            "aws_vpc.knowme-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09b89e73b22623315",
            "connectivity_type": "public",
            "id": "nat-001940eb35dea5817",
            "network_interface_id": "eni-0cf7c7e5ceca75453",
            "private_ip": "172.31.4.188",
            "public_ip": "23.20.171.222",
            "subnet_id": "subnet-0ef234a6809b69082",
            "tags": {
              "Name": "Nat1"
            },
            "tags_all": {
              "Name": "Nat1"
            }
          },
          "dependencies": [
            "aws_eip.eip-nat",
            "aws_internet_gateway.gw",
            "aws_subnet.subnet-2",
            "aws_vpc.knowme-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "maintenance-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-0e7c55d0f0a07ffb2",
                "device_index": 0,
                "instance": "i-0eec91f7b020c7965"
              }
            ],
            "id": "eni-0a2a493c089750cd0",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "0e:f0:cd:1a:38:9b",
            "private_ip": "172.31.3.50",
            "private_ips": [
              "172.31.3.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c2b91391b1d5bbdf"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a268c6270bed7861"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.knowme-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-privada",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767741045941:route-table/rtb-0316eb24c395d4f8a",
            "id": "rtb-0316eb24c395d4f8a",
            "owner_id": "767741045941",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-001940eb35dea5817",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Tabla privada"
            },
            "tags_all": {
              "Name": "Tabla privada"
            },
            "vpc_id": "vpc-0a8171cb499ed5e72"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat-gw-1",
            "aws_vpc.knowme-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767741045941:route-table/rtb-0831ff30402dc0013",
            "id": "rtb-0831ff30402dc0013",
            "owner_id": "767741045941",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d78b1b89b97b9ca2",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d78b1b89b97b9ca2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Tabla publica"
            },
            "tags_all": {
              "Name": "Tabla publica"
            },
            "vpc_id": "vpc-0a8171cb499ed5e72"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.knowme-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02946277fefc8d343",
            "route_table_id": "rtb-0831ff30402dc0013",
            "subnet_id": "subnet-0a268c6270bed7861"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.route-table-public",
            "aws_subnet.subnet-1",
            "aws_vpc.knowme-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dad5de05f845ebb5",
            "route_table_id": "rtb-0831ff30402dc0013",
            "subnet_id": "subnet-0ef234a6809b69082"
          },
          "dependencies": [
            "aws_subnet.subnet-2",
            "aws_vpc.knowme-vpc",
            "aws_internet_gateway.gw",
            "aws_route_table.route-table-public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014e5146a270af7d1",
            "route_table_id": "rtb-0316eb24c395d4f8a",
            "subnet_id": "subnet-027987f882342d263"
          },
          "dependencies": [
            "aws_subnet.subnet-priv-1",
            "aws_vpc.knowme-vpc",
            "aws_eip.eip-nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat-gw-1",
            "aws_route_table.route-table-privada",
            "aws_subnet.subnet-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a82eb5dd57a34f9",
            "route_table_id": "rtb-0316eb24c395d4f8a",
            "subnet_id": "subnet-092dad0a79565ac63"
          },
          "dependencies": [
            "aws_nat_gateway.nat-gw-1",
            "aws_route_table.route-table-privada",
            "aws_subnet.subnet-2",
            "aws_subnet.subnet-priv-2",
            "aws_vpc.knowme-vpc",
            "aws_eip.eip-nat",
            "aws_internet_gateway.gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767741045941:security-group/sg-0c2b91391b1d5bbdf",
            "description": "Allow Web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c2b91391b1d5bbdf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Host-emprendimiento",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3001
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Host-usuarios",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Mongo",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "767741045941",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "tags_all": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a8171cb499ed5e72"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.knowme-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767741045941:subnet/subnet-0a268c6270bed7861",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.31.3.0/24",
            "id": "subnet-0a268c6270bed7861",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767741045941",
            "tags": {
              "Name": "SubnetPublica1"
            },
            "tags_all": {
              "Name": "SubnetPublica1"
            },
            "vpc_id": "vpc-0a8171cb499ed5e72"
          },
          "dependencies": [
            "aws_vpc.knowme-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767741045941:subnet/subnet-0ef234a6809b69082",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.4.0/24",
            "id": "subnet-0ef234a6809b69082",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767741045941",
            "tags": {
              "Name": "SubnetPublica2"
            },
            "tags_all": {
              "Name": "SubnetPublica2"
            },
            "vpc_id": "vpc-0a8171cb499ed5e72"
          },
          "dependencies": [
            "aws_vpc.knowme-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-priv-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767741045941:subnet/subnet-027987f882342d263",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.31.1.0/24",
            "id": "subnet-027987f882342d263",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767741045941",
            "tags": {
              "Name": "SubnetPrivada1"
            },
            "tags_all": {
              "Name": "SubnetPrivada1"
            },
            "vpc_id": "vpc-0a8171cb499ed5e72"
          },
          "dependencies": [
            "aws_vpc.knowme-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-priv-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767741045941:subnet/subnet-092dad0a79565ac63",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.2.0/24",
            "id": "subnet-092dad0a79565ac63",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767741045941",
            "tags": {
              "Name": "SubnetPrivada2"
            },
            "tags_all": {
              "Name": "SubnetPrivada2"
            },
            "vpc_id": "vpc-0a8171cb499ed5e72"
          },
          "dependencies": [
            "aws_vpc.knowme-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "knowme-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767741045941:vpc/vpc-0a8171cb499ed5e72",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-08d4ac63c00efeaae",
            "default_route_table_id": "rtb-0bf407d32f29eb366",
            "default_security_group_id": "sg-03a350dfd8d806adf",
            "dhcp_options_id": "dopt-76aa970c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a8171cb499ed5e72",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0bf407d32f29eb366",
            "owner_id": "767741045941",
            "tags": {
              "Name": "KnowMe"
            },
            "tags_all": {
              "Name": "KnowMe"
            }
          }
        }
      ]
    }
  ]
}